# scop

./: Cargo.toml  Makefile  README.md
ressources/: asa.ppm  denji.ppm  sillycat.ppm
src/: app.rs  graphics.rs  main.rs  object.rs  vulkan.rs  vulkan_app.rs  window.rs  winit_app.rs
src/graphics/: app.rs  graphics.rs  input.rs  mod.rs  model.rs  view.rs  window.rs
src/math/: matrix.rs  mod.rs  vector.rs
src/object_loader/: mod.rs  object.rs  texture.rs
src/shaders/: fragment.glsl  fragment_no_normal.glsl  vertex.glsl  vertex_no_normal.glsl
