[package]
name = "ft_scop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
log = "0.4.22"
pretty_env_logger = "0.5.0"
thiserror = "2.0.9"
vulkanalia = { version = "0.25.0", features = ["libloading", "provisional", "window"] }
winit = { version = "0.30.7", features = ["rwh_06"] }
