[package]
name = "scop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
vulkano = { git = "https://github.com/vulkano-rs/vulkano/" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano/" }
winit = { version = "0.30.7", default-features = true, features = ["rwh_05"]}
